--- a/.github/workflows/createImage.yml
+++ b/.github/workflows/createImage.yml
@@ -20,4 +20,11 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az account show
+            cd aib
+            sed -i -e "s/<subscriptionID>/${{ secrets.SUBSCRIPTIONID }}/g" imageTemplateWin.json
+            sed -i -e "s/<rgName>/${{ secrets.IMAGERESOURCEGROUP }}/g" imageTemplateWin.json
+            sed -i -e "s/<region>/${{ secrets.LOCATION }}/g" imageTemplateWin.json
+            sed -i -e "s/<imageName>/${{ secrets.IMAGENAME }}/g" imageTemplateWin.json
+            sed -i -e "s/<runOutputName>/${{ secrets.RUNOUTPUTNAME }}/g" imageTemplateWin.json
+            sed -i -e "s/<imgBuilderId>/${{ secrets.IMGBUILDERID }}/g" imageTemplateWin.json
+            az resource create -g ${{ secrets.IMAGERESOURCEGROUP }} --properties @imageTemplateWin.json --is-full-object --resource-type Microsoft.VirtualMachineImages/imageTemplates -n aksWorkshopImageTemplateWin01 
