--- a/.github/workflows/stopAllVMs.yml
+++ b/.github/workflows/stopAllVMs.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az vm stop --ids $(az vm list -g ${{ secrets.RESOURCEGROUP }} --query "[].id" -o tsv)           
+            az vm stop --ids $(az graph query -q 'Resources | where type =~ "Microsoft.Compute/VirtualMachines" | where resourceGroup startswith "aksWorkshopRG-"' --query "data[].id" -o tsv)           
