--- a/.github/workflows/startAllVMs.yml
+++ b/.github/workflows/startAllVMs.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az vm start --ids $(az vm list -g ${{ secrets.RESOURCEGROUP }} --query "[].id" -o tsv)           
+            az vm start --ids $(az graph query -q 'Resources | where type =~ "Microsoft.Compute/VirtualMachines" | where resourceGroup startswith "aksWorkshopRG-"' --query "data[].id" -o tsv)           
