--- a/.github/workflows/deployBicep.yml
+++ b/.github/workflows/deployBicep.yml
@@ -27,5 +27,5 @@ jobs:
               --parameters adminPassword=${{ secrets.ADMINPASSWORD }} \
               --parameters imageReferenceId=${{ secrets.IMAGEREFERENCEID }} \
               --parameters sqlAdminPassword=${{ secrets.SQLADMINPASSWORD }} \
-              --parameters vmCount=${{ secrets.VMCOUNT }}
+              --parameters numOfUsers=${{ secrets.VMCOUNT }}
             
