--- a/.github/workflows/startAllClusters.yml
+++ b/.github/workflows/startAllClusters.yml
@@ -1,4 +1,4 @@
-name: Start All VMs
+name: Start All AKS Clusters
 
 on:
   workflow_dispatch:
@@ -20,5 +20,8 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            chmod +x $GITHUB_WORKSPACE/utils/start_all_vms.sh
-            $GITHUB_WORKSPACE/start_all_vms.sh
+            for (( i=0; i<${{ secrets.VMCOUNT }}; i++))
+            do
+              az aks start -g ${{ secrets.RESOURCEGROUP }}-user$i -n aks-$i
+            done
+            
