--- a/.github/workflows/stopAllVMs.yml
+++ b/.github/workflows/stopAllVMs.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            az config set extension.use_dynamic_install=yes_without_prompt
-            az vm stop --ids $(az graph query -q 'Resources | where type =~ "Microsoft.Compute/VirtualMachines" | where resourceGroup startswith "aksWorkshopRG-"' --query "data[].id" -o tsv)           
+            chmod +x $GITHUB_WORKSPACE/utils/stop_all_vms.sh
+            $GITHUB_WORKSPACE/stop_all_vms.sh
