--- a/.github/workflows/stopAll.yml
+++ b/.github/workflows/stopAll.yml
@@ -1,4 +1,4 @@
-name: Stop All AKS Clusters
+name: Stop All
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          
+
       - name: Azure CLI script file
         uses: azure/CLI@v1
         with:
@@ -22,4 +22,7 @@ jobs:
           inlineScript: |
             chmod +x $GITHUB_WORKSPACE/utils/stop_all_clusters.sh
             $GITHUB_WORKSPACE/utils/stop_all_clusters.sh
-            
+            chmod +x $GITHUB_WORKSPACE/utils/stop_all_vms.sh
+            $GITHUB_WORKSPACE/utils/stop_all_vms.sh
+            chmod +x $GITHUB_WORKSPACE/utils/delete_bastion.sh
+            $GITHUB_WORKSPACE/utils/delete_bastion.sh
