--- a/.github/workflows/deployDay1.yml
+++ b/.github/workflows/deployDay1.yml
@@ -22,6 +22,7 @@ jobs:
           inlineScript: |
             mkdir $GITHUB_WORKSPACE/bin
             export PATH=$PATH:$GITHUB_WORKSPACE/bin
+            az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
             chmod +x $GITHUB_WORKSPACE/utils/deploy_day1.sh
