--- a/k8s/web_app/overlays/day2/kustomization.yaml
+++ b/k8s/web_app/overlays/day2/kustomization.yaml
@@ -1,22 +1,26 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: day1
+namespace: day2
 
 resources:
 - namespace.yaml
 - ../../base
 
 patchesStrategicMerge:
-- custom-env.yaml
-- connectionstrings.yaml
+- hikari-env.yaml
+- ai.yaml
+- db.yaml
 
 secretGenerator:
-- files:
-  - ai.txt
-  - db.txt
-  name: connectionstrings
+- name: ai
   type: Opaque
+  envs:
+  - .env.ai
+- name: db
+  type: Opaque
+  envs:
+  - .env.db
 
 generatorOptions:
   disableNameSuffixHash: true
