--- a/.github/workflows/deployDay2Arm.yml
+++ b/.github/workflows/deployDay2Arm.yml
@@ -20,18 +20,7 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
+            cd utils
             az config set extension.use_dynamic_install=yes_without_prompt
-            cd bicep
-            Q='Resources
-            | where type =~ "Microsoft.Network/publicIPAddresses"
-            | where resourceGroup startswith "MC_aksWorkshopRG-"
-            | where tags["k8s-azure-service"] =~ "day2/webapp"
-            | project id'
-
-            az graph query -q "$Q" --query "data[].id" -o json > serviceIPs.json
-
-            az deployment sub create -l ${{ secrets.LOCATION }} \
-                --name aksWorkshopDeploymentDay2 \
-                --template-file=../bicep/day2.bicep \
-                --parameters serviceIPs=@serviceIPs.json \
-                --parameters numOfUsers=${{ secrets.VMCOUNT }}
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_day2_arm.sh
+            $GITHUB_WORKSPACE/utils/deploy_day2_arm.sh ${{ secrets.LOCATION }} ${{ secrets.VMCOUNT }}
