fix base resource

--- a/k8s/web_app/overlays/day3/kustomization.yaml
+++ b/k8s/web_app/overlays/day3/kustomization.yaml
@@ -5,10 +5,12 @@ namespace: day3
 
 resources:
 - namespace.yaml
-- ../day2
+- ../../base
 
 patchesStrategicMerge:
 - hikari-env.yaml
+- job-env.yaml
+- job-resource.yaml
 - ai.yaml
 - db.yaml
 
