--- a/.github/workflows/deployDay4Pre.yml
+++ b/.github/workflows/deployDay4Pre.yml
@@ -1,4 +1,4 @@
-name: Deploy Day4 ARM Pre
+name: Deploy Day4 K8s Pre
 
 on:
   workflow_dispatch:
@@ -20,7 +20,10 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
+            mkdir $GITHUB_WORKSPACE/bin
+            export PATH=$PATH:$GITHUB_WORKSPACE/bin
             az config set extension.use_dynamic_install=yes_without_prompt
+            az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/update_node_count.sh
-            $GITHUB_WORKSPACE/utils/update_node_count.sh 1
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_day4_pre.sh
+            $GITHUB_WORKSPACE/utils/deploy_day4_pre.sh
