--- a/.github/workflows/day2PreDeployK8sResources.yml
+++ b/.github/workflows/day2PreDeployK8sResources.yml
@@ -1,4 +1,4 @@
-name: Deploy Day4 K8s Pre
+name: Day2 Pre Step1 Deploy K8s Resources
 
 on:
   workflow_dispatch:
@@ -25,5 +25,5 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/deploy_day4_pre.sh
-            $GITHUB_WORKSPACE/utils/deploy_day4_pre.sh
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_day2.sh
+            $GITHUB_WORKSPACE/utils/deploy_day2.sh ${{ secrets.SQLADMINPASSWORD }}
