--- a/.github/workflows/day3PreDeployArmResources.yml
+++ b/.github/workflows/day3PreDeployArmResources.yml
@@ -1,4 +1,4 @@
-name: Deploy Day4 K8s
+name: Day3 Pre Step2 Deploy ARM Resources
 
 on:
   workflow_dispatch:
@@ -20,10 +20,7 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
-            mkdir $GITHUB_WORKSPACE/bin
-            export PATH=$PATH:$GITHUB_WORKSPACE/bin
+            cd utils
             az config set extension.use_dynamic_install=yes_without_prompt
-            az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
-            cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/deploy_day4.sh
-            $GITHUB_WORKSPACE/utils/deploy_day4.sh ${{ secrets.SQLADMINPASSWORD }}
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_day3_arm.sh
+            $GITHUB_WORKSPACE/utils/deploy_day3_arm.sh ${{ secrets.LOCATION }} ${{ secrets.VMCOUNT }}
