--- a/.github/workflows/day4PostDeleteK8sResources.yml
+++ b/.github/workflows/day4PostDeleteK8sResources.yml
@@ -1,4 +1,4 @@
-name: Deploy Day3 K8s
+name: Day4 Post Step1 Delete K8s Resources
 
 on:
   workflow_dispatch:
@@ -25,5 +25,5 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/deploy_day3.sh
-            $GITHUB_WORKSPACE/utils/deploy_day3.sh ${{ secrets.SQLADMINPASSWORD }}
+            chmod +x $GITHUB_WORKSPACE/utils/delete_day4.sh
+            $GITHUB_WORKSPACE/utils/delete_day4.sh
