--- a/.github/workflows/day4PostDeleteNginx.yml
+++ b/.github/workflows/day4PostDeleteNginx.yml
@@ -1,4 +1,4 @@
-name: Deploy Day2 K8s
+name: Day4 Post Step2 Delete Nginx
 
 on:
   workflow_dispatch:
@@ -25,5 +25,5 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/deploy_day2.sh
-            $GITHUB_WORKSPACE/utils/deploy_day2.sh ${{ secrets.SQLADMINPASSWORD }}
+            chmod +x $GITHUB_WORKSPACE/utils/delete_day4_pre.sh
+            $GITHUB_WORKSPACE/utils/delete_day4_pre.sh
