--- a/.github/workflows/day4PostDeleteNginx.yml
+++ b/.github/workflows/day4PostDeleteNginx.yml
@@ -25,5 +25,5 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/delete_day4_pre.sh
-            $GITHUB_WORKSPACE/utils/delete_day4_pre.sh
+            chmod +x $GITHUB_WORKSPACE/utils/delete_nginx.sh cpu
+            $GITHUB_WORKSPACE/utils/delete_nginx.sh cpu
