--- a/.github/workflows/day5PreDeployNginx.yml
+++ b/.github/workflows/day5PreDeployNginx.yml
@@ -25,5 +25,5 @@ jobs:
             az config set extension.use_dynamic_install=yes_without_prompt
             az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/deploy_nginx.sh cpu
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_nginx.sh
             $GITHUB_WORKSPACE/utils/deploy_nginx.sh cpu
