--- a/.github/workflows/day5PreDeploy.yml
+++ b/.github/workflows/day5PreDeploy.yml
@@ -1,4 +1,4 @@
-name: Day5 Pre Step3 Deploy K8s Resources
+name: Day5 Pre Deploy
 
 on:
   workflow_dispatch:
@@ -20,10 +20,11 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
-            mkdir $GITHUB_WORKSPACE/bin
-            export PATH=$PATH:$GITHUB_WORKSPACE/bin
             az config set extension.use_dynamic_install=yes_without_prompt
-            az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
             chmod +x $GITHUB_WORKSPACE/utils/deploy_day5.sh
-            $GITHUB_WORKSPACE/utils/deploy_day5.sh ${{ secrets.SQLADMINPASSWORD }}
+            chmod +x $GITHUB_WORKSPACE/utils/update_node_count.sh
+            chmod +x $GITHUB_WORKSPACE/utils/deploy_web_app.sh
+            chmod +x $GITHUB_WORKSPACE/utils/simulate_node_failure.sh
+            chmod +x $GITHUB_WORKSPACE/utils/update_webtest_target_ips.sh
+            $GITHUB_WORKSPACE/utils/deploy_day5.sh ${{ secrets.SQLADMINPASSWORD }} ${{ secrets.LOCATION }} ${{ secrets.VMCOUNT }} Day5
