--- a/.github/workflows/day5PreDeploy.yml
+++ b/.github/workflows/day5PreDeploy.yml
@@ -1,4 +1,4 @@
-name: Day5 Step 1 Pre Deploy
+name: Day5 Pre Step1 - Deploy
 
 on:
   workflow_dispatch:
@@ -20,10 +20,13 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
+            mkdir $GITHUB_WORKSPACE/bin
+            export PATH=$PATH:$GITHUB_WORKSPACE/bin
             az config set extension.use_dynamic_install=yes_without_prompt
+            az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
             chmod +x $GITHUB_WORKSPACE/utils/deploy_day5.sh
             chmod +x $GITHUB_WORKSPACE/utils/update_node_count.sh
             chmod +x $GITHUB_WORKSPACE/utils/deploy_web_app.sh
             chmod +x $GITHUB_WORKSPACE/utils/update_webtest_target_ips.sh
-            $GITHUB_WORKSPACE/utils/deploy_day5.sh ${{ secrets.SQLADMINPASSWORD }} ${{ secrets.LOCATION }} ${{ secrets.VMCOUNT }} Day5
+            $GITHUB_WORKSPACE/utils/deploy_day5.sh ${{ secrets.SQLADMINPASSWORD }} ${{ secrets.LOCATION }} ${{ secrets.VMCOUNT }} day5
