--- a/.github/workflows/day5UtilsSimulateNodeFailure.yml
+++ b/.github/workflows/day5UtilsSimulateNodeFailure.yml
@@ -1,4 +1,4 @@
-name: Day5 Post Step1 - Recover form Node failure
+name: Day5 Utils - Simulate Node Failure
 
 on:
   workflow_dispatch:
@@ -22,5 +22,5 @@ jobs:
           inlineScript: |
             az config set extension.use_dynamic_install=yes_without_prompt
             cd $GITHUB_WORKSPACE
-            chmod +x $GITHUB_WORKSPACE/utils/recover_from_node_failure.sh
-            $GITHUB_WORKSPACE/utils/recover_from_node_failure.sh
+            chmod +x $GITHUB_WORKSPACE/utils/simulate_node_failure.sh
+            $GITHUB_WORKSPACE/utils/simulate_node_failure.sh
