--- a/.github/workflows/day5UtilsDeleteK8sResources.yml
+++ b/.github/workflows/day5UtilsDeleteK8sResources.yml
@@ -20,7 +20,10 @@ jobs:
         with:
           azcliversion: 2.45.0
           inlineScript: |
+            mkdir $GITHUB_WORKSPACE/bin
+            export PATH=$PATH:$GITHUB_WORKSPACE/bin
             az config set extension.use_dynamic_install=yes_without_prompt
+            az aks install-cli --install-location $GITHUB_WORKSPACE/bin/kubectl
             cd $GITHUB_WORKSPACE
             chmod +x $GITHUB_WORKSPACE/utils/delete_web_app.sh
             $GITHUB_WORKSPACE/utils/${DIR}/delete_web_app.sh day5
